Add basic match service